--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -137,3 +137,9 @@ body {
   margin: 10px;
   padding: 10px;
 }
+
+#gif-container div p {
+  margin-top: .5rem;
+  font-weight: bold;
+  text-align: center;
+}
